se añadio el formulario para clientes, motos

--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#" class="seleccionado">Ordenes</a></li>
-                <li><a href="#">Clientes</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
                 <li><a href="#">Motos</a></li>
                 <li><a href="#">Marcas</a></li>
                 <li>
