--- a/motos.html
+++ b/motos.html
@@ -24,7 +24,7 @@
                 <li><a href="menu.html">Ordenes</a></li>
                 <li><a href="clientes.html">Clientes</a></li>
                 <li><a href="#" class="seleccionado">Motos</a></li>
-                <li><a href="#">Marcas</a></li>
+                <li><a href="marcas.html">Marcas</a></li>
                 <li>
                     <a href="index.html" class="logout-btn" title="Cerrar sesión">
                         <i class="fa-solid fa-power-off"></i>
@@ -36,7 +36,7 @@
 
         <div class="grid">
             <div>
-                <a href="moto.html">Añadir moto</a>
+                <a href="moto.html">Añadir orden</a>
             </div>
             <div>
                 <form role="search">
