--- a/cliente.html
+++ b/cliente.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="container-fluid">
+    <main class="container-fluid">
 
         <nav>
             <ul>
@@ -23,8 +23,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#">Ordenes</a></li>
                 <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="#">Motos</a></li>
-                <li><a href="#">Marcas</a></li>
+                <li><a href="motos.html">Motos</a></li>
+                <li><a href="marcas.html">Marcas</a></li>
                 <li>
                     <a href="index.html" class="logout-btn" title="Cerrar sesión">
                         <i class="fa-solid fa-power-off"></i>
@@ -33,17 +33,19 @@
             </ul>
         </nav>
 
-        <form action="">
-            <input type="text" placeholder="Apellidos" autofocus required>
-            <input type="password" placeholder="Nombres" required>
-            <input type="text" placeholder="Teléfono" required>
-            <input type="text" placeholder="Dirección" required>
-            <input type="text" placeholder="Correo electrónico">
-            <button type="submit" formaction="clientes.html">Continuar</button>
+        <form>
+            <fieldset>
+                <input type="text" placeholder="Apellidos" autofocus required>
+                <input type="password" placeholder="Nombres" required>
+                <input type="text" placeholder="Teléfono" required>
+                <input type="text" placeholder="Dirección" required>
+                <input type="text" placeholder="Correo electrónico">
+                <button type="submit" formaction="clientes.html">Continuar</button>
+            </fieldset>
         </form>
-    </div>
+    </main>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </body>
 
 </html>
