--- a/marcas.html
+++ b/marcas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>Marcas</title>
     <link rel="stylesheet" href="pico-main/pico-main/css/pico.min.css">
     <link rel="stylesheet" href="css/custom.css">
 </head>
@@ -16,15 +16,15 @@
         <nav>
             <ul>
                 <li>
-                    <h1>Clientes</h1>
+                    <h1>Motos</h1>
                 </li>
             </ul>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Ordenes</a></li>
-                <li><a href="#" class="seleccionado">Clientes</a></li>
+                <li><a href="menu.html">Ordenes</a></li>
+                <li><a href="clientes.html">Clientes</a></li>
                 <li><a href="motos.html">Motos</a></li>
-                <li><a href="marcas.html">Marcas</a></li>
+                <li><a href="#">Marcas</a></li>
                 <li>
                     <a href="index.html" class="logout-btn" title="Cerrar sesión">
                         <i class="fa-solid fa-power-off"></i>
@@ -36,7 +36,7 @@
 
         <div class="grid">
             <div>
-                <a href="cliente.html">Añadir cliente</a>
+                <a href="marca.html">Añadir marca</a>
             </div>
             <div>
                 <form role="search">
@@ -53,10 +53,7 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Apellidos</th>
-                        <th>Nombres</th>
-                        <th>Teléfono</th>
-                        <th>Correo</th>
+                        <th>Marca</th>
                         <th>Usuario Crea</th>
                         <th>Fecha Registro</th>
                         <th>Editar</th>
@@ -64,80 +61,61 @@
                     </tr>
                 </thead>
                 <tbody>
+
                     <tr>
                         <td>1</td>
-                        <td>García</td>
-                        <td>Juan</td>
-                        <td>555-1234</td>
-                        <td>juan.garcia@email.com</td>
+                        <td>Suzuki</td>
                         <td>admin</td>
                         <td>2024-05-01</td>
                         <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
                         <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
                     </tr>
+
                     <tr>
-                        <td>2</td>
-                        <td>López</td>
-                        <td>María</td>
-                        <td>555-5678</td>
-                        <td>maria.lopez@email.com</td>
-                        <td>jlopez</td>
-                        <td>2024-05-02</td>
-                        <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
-                        <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Pérez</td>
-                        <td>Carlos</td>
-                        <td>555-8765</td>
-                        <td>carlos.perez@email.com</td>
+                        <td>1</td>
+                        <td>Suzuki</td>
                         <td>admin</td>
-                        <td>2024-05-03</td>
+                        <td>2024-05-01</td>
                         <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
                         <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
                     </tr>
+
                     <tr>
-                        <td>4</td>
-                        <td>Martínez</td>
-                        <td>Ana</td>
-                        <td>555-4321</td>
-                        <td>ana.martinez@email.com</td>
-                        <td>mmartinez</td>
-                        <td>2024-05-04</td>
-                        <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
-                        <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Ramírez</td>
-                        <td>Luis</td>
-                        <td>555-2468</td>
-                        <td>luis.ramirez@email.com</td>
+                        <td>1</td>
+                        <td>Suzuki</td>
                         <td>admin</td>
-                        <td>2024-05-05</td>
+                        <td>2024-05-01</td>
                         <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
                         <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
                     </tr>
+
                     <tr>
-                        <td>6</td>
-                        <td>Hernández</td>
-                        <td>Lucía</td>
-                        <td>555-1357</td>
-                        <td>lucia.hernandez@email.com</td>
-                        <td>lhernandez</td>
-                        <td>2024-05-06</td>
+                        <td>1</td>
+                        <td>Suzuki</td>
+                        <td>admin</td>
+                        <td>2024-05-01</td>
                         <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
                         <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
                     </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Suzuki</td>
+                        <td>admin</td>
+                        <td>2024-05-01</td>
+                        <td><button title="Editar"><i class="fas fa-edit"></i></button></td>
+                        <td><button title="Eliminar"><i class="fas fa-trash-alt"></i></button></td>
+                    </tr>
+
                     
+
                 </tbody>
             </table>
-            
+
         </div><!--overflow-auto-->
     </div><!--container-fluid-->
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
 </body>
 
