--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="container-fluid">
-        <form action="/menu.html" method="get">
+        <form action="menu.html" method="get">
             <div id="card-login">
                 <fieldset>
                     <h2>Iniciar sesión</h2>
