--- a/menu.html
+++ b/menu.html
@@ -13,25 +13,34 @@
 
     <div class="container-fluid">
 
-        <nav>
-            <ul>
-                <li>
-                    <h1>Ordenes de taller</h1>
-                </li>
-            </ul>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html" class="seleccionado">Ordenes</a></li>
-                <li><a href="clientes.html">Clientes</a></li>
-                <li><a href="motos.html">Motos</a></li>
-                <li><a href="marcas.html">Marcas</a></li>
-                <li>
-                    <a href="index.html" class="logout-btn" title="Cerrar sesión">
-                        <i class="fa-solid fa-power-off"></i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div class="grid">
+            <div>
+
+            </div>
+            <div>
+                
+            </div>
+            <div>
+                
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="menu.html" class="seleccionado">Ordenes</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="motos.html">Motos</a></li>
+                        <li><a href="marcas.html">Marcas</a></li>
+                        <li>
+                            <a href="index.html" class="logout-btn" title="Cerrar sesión">
+                                <i class="fa-solid fa-power-off"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
 
         <div class="grid">
             <div>
@@ -47,7 +56,7 @@
 
         <!-- Tabla de clientes con datos aleatorios -->
         <div class="overflow-auto">
-
+            <h1>Ordenes de taller</h1>
             <!-- ...existing code... -->
             <div class="overflow-auto">
                 <table>
